syncdoc/tests/roundtrip/snapshots/formats_markdown/roundtrip__helpers__docs_formats_Format.md.snap
---
source: syncdoc/tests/roundtrip/helpers.rs
expression: content
---
Abstracts document type differences through tree-sitter queries.

Enables support for markdown and other structured formats by providing format-specific parsing
queries (tree-sitter uses SCM lisp queries).
