syncdoc/tests/roundtrip/snapshots/formats_markdown/roundtrip__helpers__docs_formats_Format_title_query.md.snap
---
source: syncdoc/tests/roundtrip/helpers.rs
expression: content
---
Tree-sitter query extracting section titles in this format.
