syncdoc/tests/roundtrip/snapshots/formats_markdown/roundtrip__helpers__docs_formats_markdown.md.snap
---
source: syncdoc/tests/roundtrip/helpers.rs
expression: content
---
Markdown format implementation using tree-sitter-md.

This module provides tree-sitter queries for parsing markdown documents
and extracting section structure from ATX-style headings (# syntax).
