syncdoc/tests/roundtrip/snapshots/formats_markdown/roundtrip__helpers__docs_formats_markdown_MarkdownFormat.md.snap
---
source: syncdoc/tests/roundtrip/helpers.rs
expression: content
---
Tree-sitter queries for ATX-style markdown headings (# syntax).
