syncdoc/tests/roundtrip/snapshots/formats_markdown/roundtrip__helpers__lib.rs_migrated.snap
---
source: syncdoc/tests/roundtrip/helpers.rs
expression: content
---
pub mod formats;
#[syncdoc::omnidoc]
pub mod formats {
    pub mod markdown;
}
