syncdoc/tests/roundtrip/snapshots/formats_markdown/roundtrip__helpers__original_lib.rs.snap
---
source: syncdoc/tests/roundtrip/helpers.rs
expression: content
---
pub mod formats;
pub mod formats {
    pub mod markdown;
}
